--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,6 +6,8 @@ CC=@OSHCC@
 check_PROGRAMS =  \
     hello         \
     barrier       \
+    int_put       \
+    int_put_heap  \
     threaded_init_multiple   \
     threaded_init_serialized \
     threaded_init_funneled   \
@@ -15,6 +17,9 @@ TESTS = $(check_PROGRAMS)
 
 MPIEXEC=mpiexec -n 2
 LOG_COMPILER=$(MPIEXEC)
+
+int_put_heap_SOURCES = int_put.c
+int_put_heap_CPPFLAGS  = -DUSE_SYMM_HEAP $(AM_CPPFLAGS)
 
 threaded_init_multiple_SOURCES = threaded_init.c
 threaded_init_multiple_CPPFLAGS  = $(AM_CPPFLAGS)
