test: add amo tests

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,18 +8,21 @@ check_PROGRAMS =  \
     barrier       \
     int_put       \
     int_put_heap  \
+    int_amo       \
     threaded_init_multiple   \
     threaded_init_serialized \
     threaded_init_funneled   \
     threaded_init_single     \
     space                    \
     space_int_put            \
-    space_ctx_int_put
+    space_ctx_int_put        \
+    space_int_amo
 
 if OSHMPI_ENABLE_CUDA_TEST
 check_PROGRAMS += space_cuda               \
                   space_int_put_cuda       \
-                  space_ctx_int_put_cuda
+                  space_ctx_int_put_cuda   \
+                  space_int_amo_cuda
 endif
 
 TESTS = $(check_PROGRAMS)
@@ -51,6 +54,9 @@ space_int_put_cuda_CPPFLAGS  = -DUSE_CUDA $(AM_CPPFLAGS)
 
 space_ctx_int_put_cuda_SOURCES = space_ctx_int_put.c
 space_ctx_int_put_cuda_CPPFLAGS  = -DUSE_CUDA $(AM_CPPFLAGS)
+
+space_int_amo_cuda_SOURCES = space_int_amo.c
+space_int_amo_cuda_CPPFLAGS  = -DUSE_CUDA $(AM_CPPFLAGS)
 endif
 
 .PHONY: checkprogs
